fix clipping of images

--- a/src/report-assets/css/vrt.scss
+++ b/src/report-assets/css/vrt.scss
@@ -479,7 +479,6 @@ body {
             width: auto;
             max-width: (320px + 4px);
             height: auto;
-            max-height: 480px;
             overflow: hidden;
             outline: 1px solid #EAEAEA;
             border: 2px solid transparent;
